--- a/client/src/style.css
+++ b/client/src/style.css
@@ -33,7 +33,7 @@
     height: 420px;
     width: 960px;
 }
-/* .profile{
+.profile{
     background-color:#FFFFF0
 }
 .profile h1{
@@ -46,7 +46,7 @@ margin-left: 570px;
 }
 .profile button{
     margin-left: 570px
-} */
+}
 .schedulebody{
     background-color:#FFFFF0
 }
